# Sagemaker_Operations

./: .gitignore  README.md  hello.py  pyproject.toml
Notebooks/: Sagemekertraining.ipynb  datapreparation.ipynb  image_classification.ipynb  iris_infer.csv.out  jumpstart_models.ipynb  sagemaker_batch_transform.ipynb  sagemaker_deployment_customized.ipynb  sagemakerdeploy.ipynb
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst/: labels_map.json
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst/all_images_gt/: clf_labels.csv
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst/train_annots/: train.lst
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst/valid_annots/: valid.lst
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst_from_subfolds/train_annots/: train.lst
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_lst_from_subfolds/valid_annots/: valid.lst
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_multilabel_lst/all_images_gt/: clf_labels.csv
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_multilabel_lst/train_annots/: train.lst
Notebooks/image_classification_datasets/image_classification_datasets/img_clf_multilabel_lst/valid_annots/: valid.lst
Notebooks/model/profiler-output/system/incremental/2025060812/: 1749384840.algo-1.json  (+2 more)
Notebooks_test/: datacollections.ipynb  model_training.ipynb
