[project]
name = "sagemekerlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.32",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
